--- a/dotgrowen/styles/globals.css
+++ b/dotgrowen/styles/globals.css
@@ -1,11 +1,16 @@
+#__next{
+  height: 98%;
+}
+
 body{
-  padding-top: 1em;
+  padding-top: 1.5em;
+  background-color: #0d0d0d;
 }
 
 * {
   font-family: 'Exo', sans-serif;
-  background-color: #0d0d0d;
-  color: #ffffff
+  color: #ffffff;
+  text-align: center;
 }
 
 ul {
@@ -60,6 +65,7 @@ main {
   color: #ffffff;
   z-index: 1;
   transition: ease-in-out 300ms;
+  animation: grow 2s ease-in-out infinite alternate;
 }
 
 .nav-items {
@@ -68,6 +74,12 @@ main {
   margin: 0em .5em 0em .5em;
   transition: ease-in 300ms;
   border-radius: 0%;
+  background-color: transparent;
+}
+
+@keyframes grow {
+  0%{ transform: scale(0); }
+  100%{ transform: scale(3.0);}
 }
 
 .nav-item-1:hover {
@@ -81,3 +93,4 @@ main {
 .green-dot {
   color: #1feee2
 }
+
