--- a/dotgrowen/styles/Writing.module.css
+++ b/dotgrowen/styles/Writing.module.css
@@ -33,7 +33,6 @@
     padding: 2em 0em 2em 0em;
     background-color: #101010;
     border: #00fff259 .1em solid;
-    margin: 0em .1em 0em .5em;
     transition: ease-in-out 300ms;
     display: flex;
     justify-content: space-between;
@@ -58,10 +57,25 @@ margin-left: 2em;
 
 .content_subtitle {
     background-color: transparent;
-    font-size: .6em;
+    font-size: .8em;
     font-weight: 200;
     margin: 1em auto 0em 0em;
 }
+
+.button {
+    background-color: transparent;
+    border: #00fff213 .1em solid;
+    color: #ffffff33;
+    text-align: center;
+    margin-top: .5em;
+    transition: ease-in-out 500ms;
+}
+
+.icon {
+    margin-left: .1em;
+    width: .7em;
+}
+
 
 /***** Hover */
 
@@ -72,7 +86,7 @@ margin-left: 2em;
     -moz-box-shadow: 0px 0px 7px 5px inset #0000007e;
 }
 
-.icon {
-    margin-left: .1em;
-    width: .7em;
+.button:hover {
+    border: #00fff2 .1em solid;
+    color: #ffffff;
 }
