--- a/dotgrowen/styles/Home.module.css
+++ b/dotgrowen/styles/Home.module.css
@@ -41,17 +41,15 @@
   0% {
     width: 0em;
   }
-  100% {
+  90% {
     width: 23em;
   }
 }
 
-.subtitle {}
-
 /***************** MAIN AREA ******************/
 
 .main_area {
-  margin-top: 6.7em;
+  margin-top: 6em;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -61,10 +59,16 @@
 .content {
   padding: 0em 4em 1em 4em;
   background-color: #0F0F0F;
-  border: #ffffff29 .1px solid;
+  border: #ffffff46 .1px solid;
   margin: 0em .5em 0em .5em;
   transition: ease-in-out 300ms;
   z-index: 1;
+  animation: boxlight ease-in-out 2s alternate-reverse infinite;
+}
+
+@keyframes boxlight {
+  0%{ border: transparent solid .1em; }
+  100%{ border: #ffffff46 solid .1em;}
 }
 
 .icon {
