--- a/dotgrowen/styles/Project.module.css
+++ b/dotgrowen/styles/Project.module.css
@@ -42,7 +42,13 @@
     margin: 0em .5em 1em .5em;
     transition: ease-in-out 300ms;
     position: relative;
+    animation: boxlight ease-in-out 5s alternate-reverse infinite;
 }
+
+@keyframes boxlight {
+    0%{ border: transparent solid .1em; }
+    100%{ border: #1feee229 solid .1em;}
+  }
 
 .content_title {
     margin: 0em;
